Ajustes de Views e Controllers  Dependentes

--- a/RH_/Views/Dependentes/Details.cshtml
+++ b/RH_/Views/Dependentes/Details.cshtml
@@ -34,11 +34,11 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Sexo)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class = "col-sm-3">
             @Html.DisplayNameFor(model => model.MatriculaFuncionarioNavigation)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.MatriculaFuncionarioNavigation.Bairro)
+        <dd class = "col-sm-7">
+            @Html.DisplayFor(model => model.MatriculaFuncionarioNavigation.MatriculaFuncionario)
         </dd>
     </dl>
 </div>
