--- a/RH_/Views/Dependentes/Index.cshtml
+++ b/RH_/Views/Dependentes/Index.cshtml
@@ -46,7 +46,7 @@
                 @Html.DisplayFor(modelItem => item.Sexo)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.MatriculaFuncionarioNavigation.Bairro)
+                @Html.DisplayFor(modelItem => item.MatriculaFuncionarioNavigation.MatriculaFuncionario)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
