--- a/RH_/Views/Shared/_Layout.cshtml
+++ b/RH_/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Dependentes" asp-action="Index">Dependentes</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Funcionarios" asp-action="List">ListarFuncionarios</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
